Oppdaterer personstatus ved doedsfall (#3467)
#deploy-pdl-forvalter #deploy-test-pdl-forvalter